Change the minimum height of the wrapper to make sure logo is visible in background.

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -58,7 +58,7 @@ body {
 }
 body .wrapper {
 	background: url(/images/background.jpg) no-repeat top right;	
-	min-height: 100%;
+	min-height: 800px;
 	// position: fixed;
 	width: 100%;
 	padding-top: 10%;
